# go-pktgen

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mkit  pktgen-codespell.precommit-toml  run
.github/workflows/: cache-build.yml  clang-format.yml  pre-commit.yml  smoke.yml  super-linter.yml
c-lib/: Makefile  meson.build  meson_options.txt
c-lib/gpkt/: meson.build
c-lib/gpkt/api/: _inet.c  api.c  api.h  api_private.h  meson.build  parse_args.c  parse_args.h  port.c  port.h  stats.h
c-lib/gpkt/gapi/: _inet.c  dpdk_api.c  meson.build  messages.c  msgchan.c  msgchan_priv.h  port.c  rxtx.c
c-lib/gpkt/includes/: gpkt_api.h  gpkt_common.h  meson.build
c-lib/gpkt/modes/: meson.build  pcap.c  pcap.h  single.c  single.h
c-lib/gpkt/single/: meson.build  single-mode.c  single-mode.h
c-lib/gpkt/tlog/: meson.build  tlog.c  tlog.h
c-lib/includes/: _inet.h  constants.h  dpdk_api.h  gapi_mutex_helper.h  gpkt.h  meson.build  messages.h  msgchan.h  port.h  stats.h
c-lib/libs/: meson.build
c-lib/libs/hmap/: hmap.c  hmap.h  meson.build
c-lib/libs/tlog/: meson.build  tlog.c  tlog.h
c-lib/scripts/: gpkt-build.sh  lint-run.sh
cmd/: Makefile
cmd/iobind/: Makefile  go.mod  go.sum  main.go
cmd/pktgen/: .gitignore  Makefile  cgo_config.go  cpuload.go  devices.toml  doc.go  go.mod  go.sum  gpkt.go  helpers.go  main.go  mapping.go  panels.go  perfview.go  port.go  single.go  startup.go  statsview.go  structs.go  sysinfo.go  utils.go
cmd/serde/: Makefile  go.mod  go.sum  main.go  packets.toml
cmd/test/: main.go
configs/: devices.toml  pktgen.jsonc
internal/: LICENSE  Makefile  README.md
internal/asciichart/: asciichart.go  asciichart_test.go  go.mod  options.go  utils.go
internal/asciichart/cmd/: main.go
internal/asciichart/examples/: SineCurve.go
internal/cfg/: cfg.go  cfg_test.go  go.mod  jcfg.go-kw  jcfg_test.go-kw
internal/colorize/: colorize.go  colorize_test.go  go.mod  go.sum
internal/configview/: configview.go  configview_test.go  go.mod  go.sum
internal/constants/: const.go  go.mod  structs.go
internal/cpudata/: cpudata.go  cpudata_test.go  go.mod
internal/dbg/: dbg.go  go.mod
internal/devbind/: binddev.go  binddev_test.go  devbind.go  go.mod  go.sum  vendors.go
internal/etimers/: etimers.go  etimers_test.go  go.mod  go.sum
internal/fserde/: checksum.go  consts.go  count.go  defaults.go  doc.go  dot1ad.go  dot1q.go  echo.go  ether.go  fserde-layer.go  fserde.go  go.mod  go.sum  icmpv4.go  icmpv6.go  ipv4.go  ipv6.go  mybuffer.go  payload.go  pcap.go  qinq.go  sctp.go  string.go  tcp.go  tobinary.go  tobinary_test.go  tostring.go  tostring_test.go  tsc.go  udp.go  utils.go  vxlan.go
internal/gopktgen/: apis.go  cfg.go  go.mod  go.sum  gpkt.go  l2p.go  libs.go  stats.go  structs.go
internal/gpcommon/: consts.go  go.mod  structs.go  utils.go
internal/graphdata/: go.mod  go.sum  graphdata.go  graphdata_test.go
internal/helpers/: cview.go  go.mod  go.sum  kview.go  utils.go
internal/hexdump/: go.mod  hexdump.go  hexdump_test.go
internal/iobind/: go.mod  iobind.go
internal/l2p/: go.mod  l2p.go
internal/meter/: go.mod  meter.go  meter_test.go
internal/pcap/: go.mod  pcap.go  pcap_test.go
internal/perfview/: go.mod  go.sum  perfview.go  perfview_test.go
internal/portinfo/: go.mod  portinfo.go  portinfo_test.go
internal/statsview/: go.mod  go.sum  statsview.go  statsview_test.go
internal/taborder/: go.mod  go.sum  taborder.go  taborder_test.go
internal/tlog/: go.mod  stack.go  tlog.go  tlog_test.go
internal/ttylog/: go.mod  ttylog.go
internal/utils/: go.mod  utils.go
internal/vpanels/: common.go  constants.go  go.mod  go.sum  structs.go  vpages.go  vpanels.go
pkgs/: Makefile
pkgs/kview/: .gitignore  CHANGELOG  DESIGN.md  FORK.md  LICENSE  README.md  ansi.go  application.go  borders.go  box.go  box_test.go  button.go  button_test.go  checkbox.go  checkbox_test.go  contextmenu.go  doc.go  doc_test.go  dropdown.go  flex.go  focus.go  form.go  frame.go  go.mod  go.sum  grid.go  inputfield.go  keys.go  list.go  list_test.go  modal.go  mouse.go  panels.go  primitive.go  progressbar.go  progressbar_test.go  semigraphics.go  slider.go  styles.go  tabbedpanels.go  (+10 more)
pkgs/kview/demos/box/: main.go
pkgs/kview/demos/button/: main.go
pkgs/kview/demos/checkbox/: main.go
pkgs/kview/demos/dropdown/: main.go
pkgs/kview/demos/flex/: main.go
pkgs/kview/demos/focusmanager/: main.go
pkgs/kview/demos/form/: main.go
pkgs/kview/demos/frame/: main.go
pkgs/kview/demos/grid/: main.go
pkgs/kview/demos/inputfield/autocomplete/: main.go
pkgs/kview/demos/inputfield/autocompleteasync/: main.go
pkgs/kview/demos/inputfield/simple/: main.go
pkgs/kview/demos/list/: main.go
pkgs/kview/demos/modal/: main.go
pkgs/kview/demos/panels/: main.go
pkgs/kview/demos/presentation/: center.go  code.go  colors.go  cover.go  end.go  flex.go  form.go  grid.go  inputfield.go  introduction.go  main.go  slider.go  table.go  textview.go  treeview.go  window.go
pkgs/kview/demos/primitive/: main.go
pkgs/kview/demos/progressbar/: main.go
pkgs/kview/demos/tabbedpanels/: main.go
pkgs/kview/demos/table/: main.go
pkgs/kview/demos/textview/: main.go
pkgs/kview/demos/treeview/: main.go
pkgs/kview/demos/unicode/: main.go
